<resources>
    <string name="app_name">MyFlexibleFragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_home_fragment">Hello Home Fragment</string>
    <string name="this_category">This Category</string>
    <string name="category_lifestyle">Category Lifestyle</string>
    <string name="category_name">Category Name</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="category_description">Category Description</string>
    <string name="to_profile">to Profile</string>
    <string name="question_coach">Question Coach</string>
    <string name="sir_alex_ferguson">Sir Alex Ferguson</string>
    <string name="jose_morinho">Jose Morinho</string>
    <string name="louis_van_gaal">Louis Van Gaal</string>
    <string name="david_moyes">David Moyes</string>
    <string name="close">Close</string>
    <string name="choose">Choose</string>
    <string name="ini_activity_profile">Ini Activity Profile</string>
</resources>
